# posextract

./: .gitignore  LICENSE  README.md  clean_dataset_a.csv  dataset_a.tsv  output.csv  pyproject.toml  setup.py  test.py
eval/: comp_sent.csv
eval/data/parsed_triples/OLLIE/hansard/: ollie_comp_sent_triples.txt  ollie_interrogative_sent_triples.txt  ollie_leftward_sent_triples.txt  (+1 more)
eval/data/sentences/hansard_sentences/: comp_sent.txt  interrogative_sent.txt  leftward_sent.txt  random_sent.txt
eval/data/sentences/wikipedia_sentences/: comp_sent.txt  random_sent.txt
eval/generate-datasets/: README.md  generate_wikipedia_dataset.py  posextract_extract_triples.py  select_sentences.py
eval/trash/more_sentences_temp/: comp_sent.csv  random_sent.csv
eval/trash/temp/: comp_sent.csv  random_sent.csv  wikipedia_sentences.csv
eval/use/: leftward_sent.csv  wikipedia_sentences.csv
evaluation/: README.md  auc_pr.ipynb  export_sentences.ipynb  leftward_sent.csv  output.csv  placeholder_3.csv  placeholder_5.csv  random_sent.csv  sample_hansard.Rmd
evaluation/generate-datasets/: README.md  select_sentences.py
evaluation/original_sentence_eval/: random_sent.csv
evaluation/sentence_eval/: interrogative_sent.csv  leftward_sent.csv
evaluation/trash/more_sentences_temp/: leftward_sent.csv
evaluation/trash/more_sentences_temp/original_sentence_eval/: comp_sent.csv
evaluation/trash/temp/: interrogative_sent.csv  leftward_sent.csv
evaluation/use/: comp_sent.csv  random_sent.csv
examples/: example.posrule
extract_adj_noun_pairs/: extract_adj_noun_pairs.py
posextract/extract_triples/: posextract.py
posextractor/: posextract.py  rules.py  util.py
src/posextract/: __init__.py  __main__.py  adj_noun_pairs.py  download_language_model.py  extract_triples.py  grammatical_triples.py  posextract.py  rules.py  subj_verb_pairs.py  test.py  traversal.py  triple_extraction.py  util.py  verb_phrase.py
src/posextract.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/posextract/posrule/: grammar.py  parser.py
tests/: conjunctions_test.py
(+14 files in other folders)
